# cmdwerk

./: .pre-commit-config.yaml  .python-version  HISTORY.md  LICENSE  Makefile  README.md  pyproject.toml  readthedocs.yml  reinstall.sh  requirements-dev.txt  requirements.txt  setup.cfg  update_bins.sh
docs/: Makefile  build_docs.sh  make_docs.sh  requirements_docs.txt
docs/source/: conf.py  index.rst
example_bins/: aws_ls  create_proj  ed_ssh  git_ap  git_who  jup_launch  jup_off  jup_on  load_aws_creds  py_pass  sshk  sshl  tfd_off  tfd_on
src/cmdwerk/: __init__.py  cli.py  main.py
src/cmdwerk/commands/: __init__.py  bins_cmd.py  prompt_cmd.py  pyenv_cmd.py  scripts_cmd.py
src/cmdwerk/commands/libs/: __init__.py  gen_utils.py
src/test/: test_prompt_dict_builder.py  test_prompt_loader.py
test/unit/: test_config.py
