[build-system]
requires = ["flit_core>=2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "cmdwerk"
readme = "README.md"
dynamic = ["version", "description"]
authors = [
    {name = "Marilson Campos", email = "marilson.campos@gmail.com"},
]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]


license = {file = "LICENSE"}

requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.0.0,<4.0.0",
    "click>=8.0,<9.0",
    "progress>=1.4,<2.0",
    "prompt_toolkit>=3.0",
    "pyperclip>=1.8.2"
]


[project.scripts]
cmdw = "cmdwerk.cli:main"

[project.urls]
Homepage = "https://github.com/marilsoncampos/cmdwerk"
Documentation = "https://github.com/marilsoncampos/cmdwerk/blob/main/README.md"
Repository = "https://github.com/marilsoncampos/cmdwerk"

[tool.pylint]
disable = "fixme, import-error"


